All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Applicable_Products__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the applicable product in a warranty term for which this coverage is applicable. Reference to an existing Applicable Products record in ServiceMax</description>
    <label>Applicable Products</label>
    <referenceTo>Service_Template_Products__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>