All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counter_Definition__c.field-meta.xml
<CustomField>
    <fullName>Counter_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Counter for which the reading/coverage is applicable. Reference to an existing Counter Details record in ServiceMax</description>
    <label>Counter Definition</label>
    <referenceTo>Counter_Details__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>