All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Counter_Reading__c</fullName>
    <description>Current reading of this counter</description>
    <label>Counter Reading</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>