All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counter_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Counter_Rollup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is lookup to the Counter Rollup object.</description>
    <inlineHelpText>This field is lookup to the Counter Rollup object.</inlineHelpText>
    <label>Counter Rollup</label>
    <referenceTo>Counter_Rollup__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>