All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counter_Rule__c.field-meta.xml
<CustomField>
    <fullName>Counter_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Counter Rule to which this counter definition applies. Reference to an existing ServiceMax Process record in ServiceMax</description>
    <label>Counter Rule</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>