All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counter_Type__c.field-meta.xml
<CustomField>
    <fullName>Counter_Type__c</fullName>
    <description>Indicates if the counter is increasing or decreasing in nature</description>
    <label>Counter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increasing</fullName>
            </value>
            <value>
                <fullName>Decreasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>