All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Counters_Covered__c.field-meta.xml
<CustomField>
    <fullName>Counters_Covered__c</fullName>
    <description>Number of counters covered from the configured starting point</description>
    <label>Counters Covered</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>