All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <description>Not used</description>
    <label>Coverage Limit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>