All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Coverage_Starts_At__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Starts_At__c</fullName>
    <description>Indicates the value where the coverage starts for this counter</description>
    <label>Coverage Starts At</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>