All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Covered_Products__c.field-meta.xml
<CustomField>
    <fullName>Covered_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the covered product in a service contract for which this coverage is applicable. Reference to an existing Covered Products record in ServiceMax</description>
    <label>Covered Products</label>
    <referenceTo>Service_Contract_Products__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>