All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Is_Counter_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Counter_Active__c</fullName>
    <description>Flag to indicate active status of related counter definition</description>
    <formula>Counter_Definition__r.Active__c</formula>
    <label>Is Counter Active?</label>
    <type>Checkbox</type>
</CustomField>