All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Last_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Reading__c</fullName>
    <description>This field is used to hold last reading value.</description>
    <inlineHelpText>This field is used to hold last reading value.</inlineHelpText>
    <label>Last Reading</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>