All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Last_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reading_Date__c</fullName>
    <description>This field is used to hold last reading date.</description>
    <inlineHelpText>This field is used to hold last reading date.</inlineHelpText>
    <label>Last Reading Date</label>
    <type>DateTime</type>
</CustomField>