All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <description>Maximum allowed value for this counter</description>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>