All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <description>Minimum allowed value for this counter</description>
    <label>Min Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>