All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product for which the warranty coverage is applicable. Reference to an existing product record in ServiceMax</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>