All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Service_Maintenance_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Maintenance_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service contract for which this coverage is defined. Reference to an existing service contract record in ServiceMax</description>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>