All_Component_DX/force-app/main/default/objects/Counter_Details__c/fields/Warranty_Terms__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Warranty Terms for which this coverage is defined. Reference to an existing warranty terms record in ServiceMax</description>
    <label>Warranty Terms</label>
    <referenceTo>Service_Template__c</referenceTo>
    <relationshipName>Counter_Details</relationshipName>
    <type>Lookup</type>
</CustomField>