All_Component_DX/force-app/main/default/objects/Counter_Details__c/recordTypes/Definition.recordType-meta.xml
<RecordType>
    <fullName>Definition</fullName>
    <active>true</active>
    <label>Definition</label>
</RecordType>